(zellij) initial commit

--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -18,6 +18,7 @@ brew 'starship'
 brew 'tig'
 brew 'tmux'
 brew 'tree-sitter'
+brew 'zellij'
 {{ if eq .chezmoi.os "darwin" -}}
         tap 'homebrew/cask'
         tap 'homebrew/cask-versions'
