--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,11 +1,21 @@
 {{ $email := promptString "Email" -}}
 {{ $name := promptString "Name for git commits" -}}
+{{ $python := promptBool "Install Python dependencies (y/n)" -}}
+{{ $rust := promptBool "Install Rust dependencies (y/n)" -}}
+
+# From https://www.chezmoi.io/user-guide/machines/linux/#combine-operating-system-and-linux-distribution-conditionals
+# Allows for conditionals like { if eq .osid "darwin"} { else if eq .osid "linux-fedora" }
+{{ $osid := .chezmoi.os -}}
+{{ if hasKey .chezmoi.osRelease "id" -}}
+{{   $osid = printf "%s-%s" .chezmoi.os .chezmoi.osRelease.id -}}
+{{ end -}}
 
 data:
     email: {{ $email | quote }}
     name: {{ $name | quote }}
-    python: true
-    rust: true
+    python: {{ $python }}
+    rust: {{ $rust }}
+    osid: {{ $osid | quote }}
 
     colors:
         # Bg Shades
