(brew) add utm to brewfile

--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -19,24 +19,25 @@ brew 'tig'
 brew 'tree-sitter'
 brew 'zellij'
 {{ if eq .chezmoi.os "darwin" -}}
-        tap 'homebrew/cask'
-        tap 'homebrew/cask-versions'
-        tap 'homebrew/cask-fonts'
+tap 'homebrew/cask'
+tap 'homebrew/cask-versions'
+tap 'homebrew/cask-fonts'
 
-        cask 'dash'
-        cask 'docker'
-        cask 'flux'
-        cask 'iterm2'
-        cask 'obsidian'
-        cask 'rectangle'
-        cask 'signal'
-        cask 'spotify'
+cask 'dash'
+cask 'docker'
+cask 'flux'
+cask 'iterm2'
+cask 'obsidian'
+cask 'rectangle'
+cask 'signal'
+cask 'spotify'
+cask 'utm'
 
-        {{ if eq .email "evanrittenhouse@gmail.com" -}}
-        cask 'discord'
-        cask 'firefox'
-        {{ end -}}
+{{ if eq .email "evanrittenhouse@gmail.com" -}}
+cask 'discord'
+cask 'firefox'
+{{ end -}}
 
-        # TODO - figure out a way to avoid hard-coding font
-        cask 'font-fira-code-nerd-font'
+# TODO - figure out a way to avoid hard-coding font
+cask 'font-fira-code-nerd-font'
 {{end -}}
