(brew) add tmux back

--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -17,7 +17,7 @@ brew 'rust-analyzer'
 brew 'starship'
 brew 'tig'
 brew 'tree-sitter'
-brew 'zellij'
+brew 'tmux'
 {{ if eq .chezmoi.os "darwin" -}}
 tap 'homebrew/cask'
 tap 'homebrew/cask-versions'
