--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -43,8 +43,15 @@
 # resize-overlay-duration = 4s 200ms
 
 
-font-size = 14
+
+{{ if (eq .osid "linux-fedora-asahi-remix") -}}
+font-size = 11
+{{ else }}
+font-size = 12
+{{ end }}
+
+font-family = Hack Nerd Font Mono
 
 cursor-style = block
 
-theme = gruvbox-material
+theme = Kanagawa Wave
