--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -42,15 +42,13 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 
-
-
+font-family = Hack Nerd Font Mono
+font-thicken = true
 {{ if (eq .osid "linux-fedora-asahi-remix") -}}
 font-size = 11
 {{ else }}
-font-size = 12
+font-size = 14
 {{ end }}
-
-font-family = Hack Nerd Font Mono
 
 cursor-style = block
 
