--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -57,8 +57,7 @@
     # list branches sorted by last modified
     b = "!git for-each-ref --sort='-authordate' --format='%(authordate)%09%(objectname:short)%09%(refname)' refs/heads | sed -e 's-refs/heads/--'"
 
-    wip = commit -a -m "wip" 
-    unwip = reset HEAD~1
+    wip = commit -a -m "wip" --no-verify
 
     # list aliases
     la = "!git config -l | grep alias | cut -c 7-"
