(fish) add color to ls alias

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -27,7 +27,7 @@ eval (/home/linuxbrew/.linuxbrew/bin/brew shellenv)
 # aliases
 alias vim="nvim"
 alias vims="vim -S Session.vim"
-alias ls="ls -laG"
+alias ls="ls -laG --color=auto"
 alias cat="bat"
 alias dev="cd ~/Documents/projects"
 {{ if eq .chezmoi.os "linux" -}}
