(pkg) add claude-code

--- a/dot_config/packages/brew_cask.txt.tmpl
+++ b/dot_config/packages/brew_cask.txt.tmpl
@@ -12,6 +12,7 @@ cask 'spotify'
 cask 'utm'
 
 {{ if eq .email "evanrittenhouse@gmail.com" -}}
+cask 'claude-code'
 cask 'discord'
 cask 'firefox'
 {{ end -}}
