(ghostty) change to rose-pine

--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -48,6 +48,7 @@ font-size = 14
 
 cursor-style = block
 
-theme = Kanagawa Wave
+# theme = Kanagawa Wave
+theme = rose-pine-moon
 
 mouse-hide-while-typing = true
